tests/fixtures/pass/prelude_result_ok.sc
let main(): i32 = {
  let value = Result(i32, bool).Ok(42)
  value match {
    Ok(item) => item,
    Err(_) => 0,
  }
}
